add user attempted assignments with table

--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,10 @@
 .footerLink a {
   @apply hover:text-secondary hover:underline;
 }
+
+/* assignment table */
+td,
+th {
+  text-align: center;
+  vertical-align: middle;
+}
