--- a/src/pages/Home/Feedback/Feedback.css
+++ b/src/pages/Home/Feedback/Feedback.css
@@ -3,7 +3,7 @@
   width: 40px;
   height: 40px;
   background-color: var(--color-secondary);
-  color: var(--color-primary);
+  color: var(--color-accent);
   border-radius: 100px;
   display: flex;
   align-items: center;
